# taipower-tou

./: .gitignore  API_REVIEW.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  test_hook.txt  test_simplified.txt  tox.ini
.github/workflows/: ci.yml
docs/: api_zh.md
examples/: billing_cycle_examples.py  billing_examples.py  quick_start.py  usage_examples.py
scripts/: generate_plans_summary.py
src/taipower_tou/: __init__.py  billing.py  calendar.py  custom.py  errors.py  factory.py  rates.py  tariff.py
src/taipower_tou/data/: __init__.py  詳細電價表.md  詳細電價表.txt
src/tou_calculator/: __init__.py  billing.py  calendar.py  custom.py  errors.py  factory.py  models.py  rates.py  tariff.py
src/tou_calculator/data/: plans.json  plans_summary.md
tests/: conftest.py  test_accuracy_validation.py  test_billing.py  test_billing_cycle.py  test_billing_cycle_edge_cases.py  test_calendar.py  test_comprehensive.py  test_custom.py  test_custom_stress.py  test_e2e.py  test_entry.py  test_factory.py  test_integration.py  test_production_readiness.py  test_stress.py  test_tariff.py
